--- a/src/app/burger-detail/burger-detail.component.css
+++ b/src/app/burger-detail/burger-detail.component.css
@@ -3,7 +3,14 @@
     max-width: 400px;
   }
   
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+.main-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2%;
+}
