--- a/src/app/burger-detail/burger-detail.component.html
+++ b/src/app/burger-detail/burger-detail.component.html
@@ -1,15 +1,20 @@
-<mat-card class="example-card">
-    <mat-card-header>
-        <mat-card-title>{{burger.name}}</mat-card-title>
-        <mat-card-subtitle>Burger numero {{burger.id}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src={{burger.image}} alt="Unload Photo of Burger">
-    <mat-card-content>
-        <p>Prix : {{burger.price}} €</p>
-        <p>Nutriscore : {{burger.nutriscore}}</p>
-        <p>Teneur en acides gras saturés : {{burger.nutriments['saturated-fat']}}</p>
-    </mat-card-content>
-    <mat-card-actions>
-    <a mat-raised-button color="basic" (click)="goBack()">BACK</a>
-    </mat-card-actions>
-</mat-card>
+<mat-toolbar class="mat-toolbar">
+    Voici les détails du burger
+</mat-toolbar>
+<div class="main-div">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>{{burger.name}}</mat-card-title>
+            <mat-card-subtitle>Burger numero {{burger.id}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src={{burger.image}} alt="Unload Photo of Burger">
+        <mat-card-content>
+            <p>Prix : {{burger.price}} €</p>
+            <p>Nutriscore : {{burger.nutriscore}}</p>
+            <p>Teneur en acides gras saturés : {{burger.nutriments['saturated-fat']}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+        <a mat-raised-button color="basic" (click)="goBack()">BACK</a>
+        </mat-card-actions>
+    </mat-card>
+</div>
