--- a/src/app/burgers/burgers.component.css
+++ b/src/app/burgers/burgers.component.css
@@ -1,8 +1,15 @@
 .example-card {
-    max-width: 400px;
-  }
+  max-width: 400px;
+}
   
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+.main-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2%;
+}
